# sanctum-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: ACCURACY.md  ACCURACY_REPORT.md  ADR_ASYNC_MIGRATION.md  ADR_EVAL_DRIVER.md  ADR_PARSER_LAYER.md  ADR_PAYLOAD_OFFLOAD.md  ADR_TEMPORAL_DEMOTER.md  ARCHITECTURE.md  CLAUDE_SETTINGS_REFERENCE.md  DATASET_NIST_DATALEAKAGE.md  DEMO.md  DEVPOST.md  DEV_PLATFORM.md  EVAL_LLM_INJECTION.md  FAILURE_MODES.md  LLM_AGNOSTIC.md  PRIVACY_AND_PUBLIC_RECORD.md  REPRODUCTION.md  SAMPLE_EXECUTION_LOG.md  THREAT_MODEL_DECEPTION.md  THREAT_MODEL_DEPENDENCIES.md  THREAT_MODEL_LEDGER.md  THREAT_MODEL_SANITIZATION.md  THREAT_MODEL_TRIANGULATION.md
docs/figures/: pareto.html
reports/: wallclock.json
scripts/: bootstrap_vm.sh  check_no_secrets.sh  claude-session.sh  compute_cis.py  demo_reset.sh  demo_verify.py  dfir_investigation.py  eval_llm_injection.py  expand_subset.py  fetch_dfir_metric.py  gen_pre_instrumentation_fixture.py  generate_eval_report.py  generate_report.py  measure_wallclock.py  plot_pareto.py  quickstart.py  render_arch_diagram.py  run_dfir_metric_eval.py  sanctum-mcp.service  smoke_test_mcp_stdio.sh  submission_dry_run.sh  summarize_eval.py  threat_model_priors.py  validate_threat_model_math.py  validate_with_sympy.py
src/sanctum/: __init__.py  audit.py  deception.py  events.py  families.py  finding.py  notary.py  payload.py  sanitize.py  server.py
src/sanctum/parsers/: __init__.py  _errors.py  _fixture_io.py  amcache.py  appcompat.py  bam.py  prefetch.py  sysmon.py  userassist.py
tests/: conftest.py  test_async_tool_signatures.py  test_audit.py  test_bypass.py  test_concurrency.py  test_deception.py  test_eval_driver_unit.py  test_families.py  test_feature_flag_parallel.py  test_fetch_dfir_metric.py  test_finding.py  test_injection_scenarios.py  test_ledger_backward_compat.py  test_mcp_cve_coverage.py  test_no_temporal_promote_path.py  test_notary.py  test_parsers.py  test_payload.py  test_sanitize.py  test_server_boundaries.py  test_sygnia_attack_coverage.py  test_synthetic_case.py  test_temporal_coupling_demoter.py  test_threat_model_priors.py  test_wallclock_script_smoke.py
tests/benchmarks/: arch_property_questions.py  conftest.py  dfir_metric_subset.py  test_dfir_metric_eval_driver.py  test_dfir_metric_smoke.py  test_subset_jaccard_similarity.py
tests/benchmarks/_stubs/: mcp_call_crash.py  mcp_call_hang.py  mcp_handshake_hang.py
tests/fixtures/: cve_2025_49596_pattern.txt  ledger_pre_instrumentation.jsonl  ledger_pre_instrumentation.key  sygnia_2025_08_pattern.txt
tests/fixtures/accuracy_corpus/: corpus_manifest.json  questions.json
tests/fixtures/accuracy_corpus/cases/mf_c2agent_001/Prefetch/: C2AGENT.EXE-F1A2B3C4.pf.sanctum-fixture.json
tests/fixtures/accuracy_corpus/cases/mf_c2agent_001/logs/: Microsoft-Windows-Sysmon%4Operational.evtx.sanctum-fixture.json
tests/fixtures/accuracy_corpus/cases/mf_c2agent_001/registry/: Amcache.hve.sanctum-fixture.json
tests/fixtures/accuracy_corpus/cases/mf_lateral_001/logs/: Microsoft-Windows-Sysmon%4Operational.evtx.sanctum-fixture.json
tests/fixtures/accuracy_corpus/cases/mf_lateral_001/registry/: NTUSER.DAT.sanctum-fixture.json  SYSTEM.sanctum-fixture.json
tests/fixtures/accuracy_corpus/cases/mf_persistence_001/Prefetch/: SVCUPDATE.EXE-A1B2C3D4.pf.sanctum-fixture.json
tests/fixtures/accuracy_corpus/cases/mf_persistence_001/logs/: Microsoft-Windows-Sysmon%4Operational.evtx.sanctum-fixture.json
tests/fixtures/accuracy_corpus/cases/mf_persistence_001/registry/: NTUSER.DAT.sanctum-fixture.json
tests/fixtures/accuracy_corpus/cases/mf_privesc_001/logs/: Microsoft-Windows-Sysmon%4Operational.evtx.sanctum-fixture.json
tests/fixtures/accuracy_corpus/cases/mf_privesc_001/registry/: Amcache.hve.sanctum-fixture.json
tests/fixtures/accuracy_corpus/cases/smoke/Prefetch/: CMD.EXE-12345678.pf.sanctum-fixture.json  CMD.EXE-B2C3D4E5.pf.sanctum-fixture.json  MIMIKATZ.EXE-C3D4E5F6.pf.sanctum-fixture.json  NET.EXE-D4E5F6A1.pf.sanctum-fixture.json  NOTEPAD.EXE-A1B2C3D4.pf.sanctum-fixture.json  PSEXEC.EXE-E5F6A1B2.pf.sanctum-fixture.json  STAGER.EXE-ABCDEF01.pf.sanctum-fixture.json
tests/fixtures/accuracy_corpus/cases/smoke/logs/: Microsoft-Windows-Sysmon%4Operational.evtx  Microsoft-Windows-Sysmon%4Operational.evtx.sanctum-fixture.json
tests/fixtures/accuracy_corpus/cases/smoke/registry/: Amcache.hve  Amcache.hve.sanctum-fixture.json  NTUSER.DAT.sanctum-fixture.json  SYSTEM  SYSTEM.sanctum-fixture.json
tests/fixtures/case_temp_exec_001/: README.md  ground_truth.py
tests/fixtures/case_temp_exec_001_synthetic/: README.md
tests/fixtures/case_temp_exec_001_synthetic/prefetch/: RUNTIMEBROKER.EXE-A1B2C3D4.pf  RUNTIMEBROKER.EXE-A1B2C3D4.pf.sanctum-fixture.json
tests/fixtures/case_temp_exec_001_synthetic/registry/: Amcache.hve  Amcache.hve.sanctum-fixture.json
tests/fixtures/timestomp_injection_demo/cases/demo/Prefetch/: MALWARE.EXE-AABBCCDD.pf.sanctum-fixture.json
tests/fixtures/timestomp_injection_demo/cases/demo/logs/: Microsoft-Windows-Sysmon%4Operational.evtx.sanctum-fixture.json
tests/fixtures/timestomp_injection_demo/cases/demo/registry/: Amcache.hve.sanctum-fixture.json  NTUSER.DAT.sanctum-fixture.json
