[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "sanctum-mcp"
version = "0.1.0"
description = "Architecturally-hardened DFIR MCP server for autonomous incident response"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Jason Tofte" }]
keywords = ["dfir", "forensics", "mcp", "incident-response", "sift"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]

dependencies = [
  # Official MCP Python SDK — provides FastMCP decorator API and stdio transport.
  "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.10",
]

[project.scripts]
sanctum-mcp = "sanctum.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sanctum"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "S"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
# Allow assert in tests (S) and let descriptive test-function signatures exceed
# the 100-char line length (E501) — test names are self-documenting and wrapping
# them at column limits hurts readability without protecting anything.
"tests/*" = ["S", "E501"]
# Allow math-notation single-capital variable names (N806) in scripts/ — the
# threat-model validators intentionally mirror the docs' notation
# (S = subset, L = length, k = threshold). Renaming to lowercase would
# disconnect code from the proofs it implements.
"scripts/*" = ["N806"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=sanctum --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
