[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "sanctum-mcp"
version = "0.2.0"
description = "Architecturally-hardened DFIR MCP server for autonomous incident response"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Jason Tofte" }]
keywords = ["dfir", "forensics", "mcp", "incident-response", "sift"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]

dependencies = [
  # Official MCP Python SDK — provides FastMCP decorator API and stdio transport.
  "mcp>=1.0",
  # Pure-Python Windows registry hive reader. Used by `sanctum.parsers.amcache`
  # (and forthcoming AppCompat/UserAssist/BAM real-mode bodies) to walk hive
  # binary structures without shelling out to a native tool. Pure-Python keeps
  # the dependency surface small and lets the parser run on the same operator
  # host as the MCP server (no kernel/OS-version coupling). MIT-licensed.
  # Pinned to >=6 for the iter_subkeys / get_values(as_json=True) API surface
  # this layer relies on.
  "regipy>=6",
  # Windows Prefetch (.pf) parser. Used by `sanctum.parsers.prefetch` for
  # version detection (v17/23/26/30), MAM/LZXPRESS-Huffman decompression
  # on Win 10+ via `ctypes.windll.ntdll.RtlDecompressBufferEx`, and struct
  # unpacking. Apache-2.0; pinned to >=4 for the v30 (Win 10/11) layout.
  # NOTE: MAM decompression is Windows-only — non-Windows hosts surface
  # MAM-compressed `.pf` files as `ArtifactMalformedError`, which is the
  # right answer (the analyst is expected to run Sanctum on Windows when
  # triaging Win 10/11 prefetch).
  "windowsprefetch>=4",
  # Pure-Python EVTX (.evtx) parser by Willi Ballenthin. Used by
  # `sanctum.parsers.sysmon` to walk Sysmon-Operational EID 1 and
  # Security EID 4688 (process-create) records — both Kernel-ETW family.
  # Apache-2.0; pinned to >=0.8 for the chunked-records iterator API
  # this layer relies on. Pure-Python keeps the dep cross-platform — no
  # ctypes/OS coupling, unlike `windowsprefetch`.
  "python-evtx>=0.8",
  # XML-hardened parser used by `sanctum.parsers.sysmon` to consume the
  # XML rendered by `python-evtx`. Modern stdlib `xml.etree` rejects
  # external entities by default but does NOT cap entity-expansion
  # (billion-laughs) — `defusedxml` adds that layer. EVTX bytes are
  # attacker-controllable, so the hardening is load-bearing, not
  # cosmetic. Python-Software-Foundation license.
  "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.10",
]
# Optional extra for the LLM-injection eval driver (scripts/eval_llm_injection.py).
# Kept out of [dev] so the test suite stays SDK-free and contributors who don't
# need to re-run the eval don't pull the anthropic SDK + transitive deps.
# Install via: pip install -e '.[eval]'
eval = [
  "anthropic>=0.40",
]

[project.scripts]
sanctum-mcp = "sanctum.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sanctum"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "S"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
# Allow assert in tests (S) and let descriptive test-function signatures exceed
# the 100-char line length (E501) — test names are self-documenting and wrapping
# them at column limits hurts readability without protecting anything.
"tests/*" = ["S", "E501"]
# Allow math-notation single-capital variable names (N806) in scripts/ — the
# threat-model validators intentionally mirror the docs' notation
# (S = subset, L = length, k = threshold). Renaming to lowercase would
# disconnect code from the proofs it implements.
"scripts/*" = ["N806"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=sanctum --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
