[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "sanctum-mcp"
version = "0.3.0"
description = "Architecturally-hardened DFIR MCP server for autonomous incident response"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Jason Tofte" }]
keywords = ["dfir", "forensics", "mcp", "incident-response", "sift"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]

# Runtime deps are exact-pinned (`==`) and the resolved tree (with hashes for
# every wheel) is captured in `requirements.txt`. Sanctum is an
# operator-deployed MCP server, not a library — exact-pin protects evidence
# integrity against silent transitive drift, and `pip install -r
# requirements.txt --require-hashes` rejects any wheel whose hash doesn't
# match the lockfile. See `CLAUDE.md` → "Pinning policy" for the regen flow.
# When bumping a primary dep, run `pip-compile pyproject.toml --generate-hashes
# -o requirements.txt` and commit both files together.
dependencies = [
  # Official MCP Python SDK — provides FastMCP decorator API and stdio transport.
  "mcp==1.27.0",
  # Pure-Python Windows registry hive reader. Used by `sanctum.parsers.amcache`
  # (and AppCompat/UserAssist/BAM real-mode bodies) to walk hive binary
  # structures without shelling out to a native tool. Pure-Python keeps the
  # dependency surface small and lets the parser run on the same operator host
  # as the MCP server (no kernel/OS-version coupling). MIT-licensed. The
  # `iter_subkeys` / `get_values(as_json=True)` API surface this layer relies
  # on first appears in 6.0.
  "regipy==6.2.1",
  # Windows Prefetch (.pf) parser. Used by `sanctum.parsers.prefetch` for
  # version detection (v17/23/26/30), MAM/LZXPRESS-Huffman decompression on
  # Win 10+ via `ctypes.windll.ntdll.RtlDecompressBufferEx`, and struct
  # unpacking. Apache-2.0. Upstream is single-maintainer and last released
  # 4.0.3 on 2021-04-29; the exact pin + hash-locked install path is the
  # supply-chain mitigation for that abandonment risk. If a CVE drops and no
  # upstream patch lands, the contingency is to vendor under `third_party/`
  # — see `docs/THREAT_MODEL_DEPENDENCIES.md` §"Posture ladder" rung 4.
  # NOTE: MAM decompression is Windows-only — non-Windows hosts surface
  # MAM-compressed `.pf` files as `ArtifactMalformedError`, which is the right
  # answer (the analyst is expected to run Sanctum on Windows when triaging
  # Win 10/11 prefetch).
  "windowsprefetch==4.0.3",
  # Pure-Python EVTX (.evtx) parser by Willi Ballenthin. Used by
  # `sanctum.parsers.sysmon` to walk Sysmon-Operational EID 1 and Security
  # EID 4688 (process-create) records — both Kernel-ETW family. Apache-2.0.
  # The chunked-records iterator API this layer relies on first appears in
  # 0.8. Pure-Python keeps the dep cross-platform — no ctypes/OS coupling,
  # unlike `windowsprefetch`.
  "python-evtx==0.8.1",
  # XML-hardened parser used by `sanctum.parsers.sysmon` to consume the XML
  # rendered by `python-evtx`. Modern stdlib `xml.etree` rejects external
  # entities by default but does NOT cap entity-expansion (billion-laughs)
  # — `defusedxml` adds that layer. EVTX bytes are attacker-controllable, so
  # the hardening is load-bearing, not cosmetic. Python-Software-Foundation
  # license.
  "defusedxml==0.7.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  # Async test support for Phase 3 async-def tool migration (ARCH-001).
  # Pinned to 0.23.x series: 1.x dropped asyncio_mode="strict" default
  # behavior in ways that break fixture isolation. asyncio_mode="strict"
  # is set in [tool.pytest.ini_options] below.
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.10",
  # Lockfile generator. Used to regenerate `requirements.txt` from this
  # `pyproject.toml`'s `[project].dependencies`, with `--generate-hashes`
  # producing the per-wheel SHA256 set that `pip install --require-hashes`
  # validates. Runtime install path uses the lockfile; this dep exists
  # only for the regen step. Dev-only — kept off the runtime tree.
  "pip-tools>=7.4",
  # Chart generation for scripts/plot_pareto.py (F2 Pareto frontier, Phase 4).
  # Dev-only: not a runtime dep of the MCP server itself.
  "matplotlib>=3.8",
]
# Optional extra for the LLM-injection eval driver (scripts/eval_llm_injection.py).
# Kept out of [dev] so the test suite stays SDK-free and contributors who don't
# need to re-run the eval don't pull the anthropic SDK + transitive deps.
# Install via: pip install -e '.[eval]'
eval = [
  "anthropic>=0.40",
]

[project.scripts]
sanctum-mcp = "sanctum.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sanctum"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "S"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
# Allow assert in tests (S) and let descriptive test-function signatures exceed
# the 100-char line length (E501) — test names are self-documenting and wrapping
# them at column limits hurts readability without protecting anything.
"tests/*" = ["S", "E501"]
# Allow math-notation single-capital variable names (N806) in scripts/ — the
# threat-model validators intentionally mirror the docs' notation
# (S = subset, L = length, k = threshold). Renaming to lowercase would
# disconnect code from the proofs it implements.
"scripts/*" = ["N806"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=sanctum --cov-report=term-missing -m 'not benchmark'"
# strict mode: tests must explicitly mark @pytest.mark.asyncio — no implicit
# co-routine detection, which hides missing markers until CI runs on a cold env.
asyncio_mode = "strict"
markers = [
  # AC-8/AC-10 — opt-in marker for the DFIR-Metric eval driver smoke tests
  # and any test that requires the cached upstream JSON (under .cache/dfir-metric/).
  # Default `pytest -q` excludes these so fast CI stays fast; run with
  # `pytest -m benchmark` to exercise them.
  "benchmark: opt-in DFIR-Metric eval scaffolding + cached-upstream tests",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
